--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
     "@gluestack-ui/overlay": "^0.1.15",
     "@gluestack-ui/toast": "^1.0.7",
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/native": "^6.0.2",
+    "@reown/appkit-wagmi-react-native": "^1.0.2",
+    "@tanstack/react-query": "^5.59.16",
+    "@walletconnect/react-native-compat": "^2.17.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.28",
+    "expo-application": "~5.9.1",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -39,12 +44,16 @@
     "react-native": "0.74.5",
     "react-native-css-interop": "^0.0.36",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-get-random-values": "~1.11.0",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.1.0",
+    "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "viem": "^2.21.34",
+    "wagmi": "^2.12.25"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
