--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build the package
-        run: npm run build # Replace with your build command if needed
+      # - name: Build the package
+      #   run: npm run build # Replace with your build command if needed
 
       # Avant la commande `npm publish`, ajoute une étape pour mettre à jour la version
       - name: Bump version
