--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "web3mobile",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
