--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish to npm
 on:
   push:
     branches:
-      - main # Change 'main' to the branch you want to trigger the publish
+      - main
 
 jobs:
   publish:
@@ -11,26 +11,21 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      # Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '16' # Or the version your project requires
+          node-version: '16'
+          # Ajouter cette configuration pour npm
+          registry-url: 'https://registry.npmjs.org/'
 
-      # Install dependencies and build the package
       - name: Install dependencies
         run: npm install
 
-      # - name: Build the package
-      #   run: npm run build # Replace with your build command if needed
-
-      # Avant la commande `npm publish`, ajoute une étape pour mettre à jour la version
       - name: Bump version
         run: npm version patch --no-git-tag-version
 
-      # Publish to npm
       - name: Publish to npm
         env:
+          # Utilisez NODE_AUTH_TOKEN au lieu de NPM_TOKEN
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npm publish
-        if: github.ref == 'refs/heads/main' # Publishes only from the main branch
+        run: npm publish --access public
